# lidarAivision

install/: local_setup.sh  setup.sh
install/r2d2/share/r2d2/: local_setup.sh  package.dsv  package.ps1  package.sh
install/r2d2/share/r2d2/config/: ekfultimate.yaml  filter_right.yaml
install/r2d2/share/r2d2/launch/: CUDAELOTTISZAR.py  atibot_nav2_v1.py  atibotlaunch.py  atibotslam.py  camera.py  gazebo.launch  launchcam.py  launchermentesmukodo.py  lidar.py  map_saver.py  nav2.py  realsense_launch.py  robotlocalization2.py  slamv2.py  slamv3d.py  test.py
install/rplidar_ros/lib/rplidar_ros/: rplidar_client  rplidar_composition
install/rplidar_ros/share/rplidar_ros/: package.sh
log/: latest_build
src/r2d2/: CMakeLists.txt
src/r2d2/config/: atirobotbase.yaml  ekfultimate2.yaml  ekfultimate3.yaml  mentes.json  realsense-default.json  realsense-jo.json  realsense_config.json
src/r2d2/config/.history/: realsense_config_20240419125303.json  realsense_config_20240419131509.json  realsense_config_20240419131733.json  realsense_config_20240419140424.json
src/r2d2/launch/: alexkamera.py  atibotlaunchv2.py  atibottest.py  basic_launch_nav2_v2.py  display.launch  hoverboard_launch.py  lidartest.py  localization.py  mentes.py  merge.py  mlauncher.py  nav2launch.py  robotlocalization.py  robotstate.py  simulation.py  slam.py  slamv3.py
src/r2d2/launch/.history/: launcher_20240613095539.py  mlauncher_20240702101122.py  mlauncher_20240702101208.py
src/r2d2/maps/: skynet.pgm
src/r2d2/meshes/: drivewhl_r_link.STL  robotbase.stl
(+16 files in other folders)
